chore: 準備發布至 VS Code Marketplace
- 更新 package.json: 設定 publisher 為 davidfan 並指定圖示
- 更新 README.md: 優化說明文件並修正 Marketplace 連結

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "Safe JSP Formatter",
   "description": "The only non-destructive formatter for JSP scriptlets.",
   "version": "0.0.1",
+  "publisher": "davidfan",
+  "icon": "icon.png",
   "engines": {
     "vscode": "^1.108.0"
   },
