chore: 加入 repository 資訊以符合 vsce 發布要求

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "0.0.1",
   "publisher": "davidfan",
   "icon": "icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fandavid/safe-jsp-formatter.git"
+  },
   "engines": {
     "vscode": "^1.108.0"
   },
