chore: 完善 package.json 發布屬性 (preview, keywords, repository)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Safe JSP Formatter",
   "description": "The only non-destructive formatter for JSP scriptlets.",
   "version": "0.0.1",
+  "preview": true,
   "publisher": "davidfan",
   "icon": "icon.png",
   "repository": {
@@ -12,6 +13,14 @@
   "engines": {
     "vscode": "^1.108.0"
   },
+  "license": "MIT",
+  "keywords": [
+    "jsp",
+    "formatter",
+    "beautify",
+    "java",
+    "scriptlet"
+  ],
   "categories": [
     "Formatters"
   ],
