build: integrate prettier-plugin-java and update changelog
- Remove `node_modules` from `.vscodeignore` to ensure bundled dependencies are included in the package.
- Update `CHANGELOG.md` with detailed version history from 0.0.6 to 0.1.2, highlighting the Prettier Java plugin integration, smart heuristics for Java comments, and various bug fixes.
- Refactor `esbuild.js` for better formatting and consistency.
- Update `src/formatter.ts` and related tests to support asynchronous formatting required by Prettier.
- Improve JSP formatting logic to handle Java declarations, scriptlets, and expressions more robustly using a hybrid Prettier-based approach.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "safe-jsp-formatter",
   "displayName": "Safe JSP Formatter",
   "description": "The only non-destructive formatter for JSP scriptlets.",
-  "version": "0.0.5",
+  "version": "0.1.2",
   "preview": true,
   "publisher": "davidfan",
   "icon": "icon.png",
@@ -76,6 +76,8 @@
     "typescript-eslint": "^8.52.0"
   },
   "dependencies": {
-    "js-beautify": "^1.15.4"
+    "js-beautify": "^1.15.4",
+    "prettier": "^3.8.1",
+    "prettier-plugin-java": "^2.8.1"
   }
 }
